# portal_nicegui

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.cursor/rules/: coding.mdc  general.mdc
docs/: sphinx_requirements.txt
docs/source/: conf.py
src/dg_portal/: __init__.py
src/dg_portal/commons/: __init__.py  internal_paths.py  layouts.py  nav.py  registry.py  settings.py
src/dg_portal/modules/: home.py  reports.py
src/dg_portal/modules/engineering/: __init__.py  module_homepage.py
src/dg_portal/modules/engineering/bom/: __init__.py  views.py
src/dg_portal/modules/field_service/: module_homepage.py
src/dg_portal/modules/finance/: module_homepage.py
src/dg_portal/modules/hr/: module_homepage.py
src/dg_portal/modules/inventory/: __init__.py  module_homepage.py
src/dg_portal/modules/logistics/: module_homepage.py
src/dg_portal/modules/maintenance/: module_homepage.py
src/dg_portal/modules/marketing/: module_homepage.py
src/dg_portal/modules/operations/: __init__.py  module_homepage.py
src/dg_portal/modules/operations/prod_management/: __init__.py  boms.py  views.py
src/dg_portal/modules/platform_admin/: module_homepage.py
src/dg_portal/modules/purchasing/: module_homepage.py
src/dg_portal/modules/quality/: module_homepage.py
src/dg_portal/modules/sales/: module_homepage.py
static/css/: layouts.css
