
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/dg_portal"]

[project]
name = "dg_portal"
version = "1.0.0"
description = ""  # add project description here
readme = "README.md"
authors = [{ name = "Frederic Pepin", email = "fredericpepin3@gmail.com" }]
license = { text = "MIT License" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.12"

dependencies = [
    "nicegui",
    "pydantic",
    "pydantic-settings",
    "pydantic_core",
    "pyyaml",
    "python-dotenv",
    "python-engineio",
    "python-multipart",
    "python-socketio",
]
